--- a/index.html
+++ b/index.html
@@ -7,61 +7,74 @@
 </head>
 <body>
     <h1>Location-based Attendance System</h1>
-    <button id="set-location">Set Initial Location</button>
+    <button id="set-location-1">Set Corner 1</button>
+    <button id="set-location-2" disabled>Set Corner 2</button>
+    <button id="set-location-3" disabled>Set Corner 3</button>
+    <button id="set-location-4" disabled>Set Corner 4</button>
     <button id="check-location" disabled>Check Location</button>
     <div id="status"></div>
-    <div id="initial-coordinates"></div>
-    <div id="current-coordinates"></div>
+    <div id="coordinates"></div>
 
     <script>
-        let initialCoordinates = null;
-        const radius = 50; // Radius in meters
+        let cornerCoordinates = [];
+        let currentCorner = 0;
 
-        document.getElementById('set-location').addEventListener('click', function() {
+        document.getElementById('set-location-1').addEventListener('click', () => setLocation(1));
+        document.getElementById('set-location-2').addEventListener('click', () => setLocation(2));
+        document.getElementById('set-location-3').addEventListener('click', () => setLocation(3));
+        document.getElementById('set-location-4').addEventListener('click', () => setLocation(4));
+        document.getElementById('check-location').addEventListener('click', checkLocation);
+
+        function setLocation(cornerNumber) {
             if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(setInitialLocation, errorCallback);
+                navigator.geolocation.getCurrentPosition((position) => {
+                    setCornerCoordinates(cornerNumber, position);
+                }, errorCallback);
             } else {
                 alert('Geolocation is not supported by this browser.');
             }
-        });
+        }
 
-        document.getElementById('check-location').addEventListener('click', function() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(checkLocation, errorCallback);
-            } else {
-                alert('Geolocation is not supported by this browser.');
-            }
-        });
-
-        function setInitialLocation(position) {
-            initialCoordinates = {
+        function setCornerCoordinates(cornerNumber, position) {
+            const coordinates = {
                 latitude: position.coords.latitude,
                 longitude: position.coords.longitude
             };
-            document.getElementById('initial-coordinates').innerText = 
-                `Initial Coordinates: Latitude: ${initialCoordinates.latitude}, Longitude: ${initialCoordinates.longitude}`;
-            document.getElementById('status').innerText = 'Initial location set.';
-            document.getElementById('check-location').disabled = false;
-        }
+            cornerCoordinates[cornerNumber - 1] = coordinates;
+            currentCorner++;
 
-        function checkLocation(position) {
-            if (!initialCoordinates) {
-                document.getElementById('status').innerText = 'Initial location not set.';
-                return;
+            document.getElementById('coordinates').innerText += 
+                `Corner ${cornerNumber} Coordinates: Latitude: ${coordinates.latitude}, Longitude: ${coordinates.longitude}\n`;
+
+            document.getElementById(`set-location-${cornerNumber}`).disabled = true;
+            if (cornerNumber < 4) {
+                document.getElementById(`set-location-${cornerNumber + 1}`).disabled = false;
             }
 
-            const userLat = position.coords.latitude;
-            const userLng = position.coords.longitude;
+            if (currentCorner === 4) {
+                document.getElementById('status').innerText = 'All corners set.';
+                document.getElementById('check-location').disabled = false;
+            }
+        }
 
-            document.getElementById('current-coordinates').innerText = 
-                `Current Coordinates: Latitude: ${userLat}, Longitude: ${userLng}`;
-            
-            const distance = calculateDistance(userLat, userLng, initialCoordinates.latitude, initialCoordinates.longitude);
-            
-            if (distance <= radius) {
-                document.getElementById('status').innerText = 'You are within the radius of the initial location.';
+        function checkLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition((position) => {
+                    const userCoordinates = {
+                        latitude: position.coords.latitude,
+                        longitude: position.coords.longitude
+                    };
+                    document.getElementById('coordinates').innerText += 
+                        `Current Coordinates: Latitude: ${userCoordinates.latitude}, Longitude: ${userCoordinates.longitude}\n`;
+
+                    if (isInsidePolygon(userCoordinates, cornerCoordinates)) {
+                        document.getElementById('status').innerText = 'You are within the classroom boundaries.';
+                    } else {
+                        document.getElementById('status').innerText = 'You are outside the classroom boundaries.';
+                    }
+                }, errorCallback);
             } else {
-                document.getElementById('status').innerText = 'You are not within the radius of the initial location.';
+                alert('Geolocation is not supported by this browser.');
             }
         }
 
@@ -70,22 +83,22 @@
             document.getElementById('status').innerText = 'Error fetching location.';
         }
 
-        // Haversine formula to calculate the distance between two coordinates in meters
-        function calculateDistance(lat1, lon1, lat2, lon2) {
-            const R = 6371e3; // Earth radius in meters
-            const φ1 = lat1 * Math.PI / 180;
-            const φ2 = lat2 * Math.PI / 180;
-            const Δφ = (lat2 - lat1) * Math.PI / 180;
-            const Δλ = (lon2 - lon1) * Math.PI / 180;
+        // Function to check if a point is inside a polygon
+        function isInsidePolygon(point, polygon) {
+            const x = point.latitude;
+            const y = point.longitude;
 
-            const a = Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
-                      Math.cos(φ1) * Math.cos(φ2) *
-                      Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
-            const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+            let inside = false;
+            for (let i = 0, j = polygon.length - 1; i < polygon.length; j = i++) {
+                const xi = polygon[i].latitude, yi = polygon[i].longitude;
+                const xj = polygon[j].latitude, yj = polygon[j].longitude;
 
-            const distance = R * c;
+                const intersect = ((yi > y) != (yj > y)) &&
+                    (x < (xj - xi) * (y - yi) / (yj - yi) + xi);
+                if (intersect) inside = !inside;
+            }
 
-            return distance;
+            return inside;
         }
     </script>
 </body>
